# homework_33

./: .env.example  README.md  pyproject.toml
todolist/core/: admin.py
todolist/core/migrations/: 0001_initial.py
todolist/todolist/: settings.py
